--- a/Trial/app/views/mainsheets/show.html.erb
+++ b/Trial/app/views/mainsheets/show.html.erb
@@ -1,30 +1,41 @@
+<% provide(:title, "Mainsheet: Where the user may witness their wonderful radio broadcasts!") %>
+<% provide(:keywords, "broadcast, audio") %>
+<% provide(:description, "Broadcast your voice to the world.") %>
 <p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @mainsheet.name %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%= @mainsheet.description %>
-</p>
-
-<p>
-  <b>Created on:</b>
-  <%= @mainsheet.created_on %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%= @mainsheet.user_id %>
-</p>
-
-<p>
-  <b>Maintenance:</b>
-  <%= @mainsheet.maintenance %>
-</p>
-
-
-<%= link_to 'Edit', edit_mainsheet_path(@mainsheet) %> |
-<%= link_to 'Back', mainsheets_path %>
+<h1 class="pageheader">
+   <div class="inner"><%= @mainsheet.name %></div>
+   <% if current_user && (current_user.id == @mainsheet.user_id || current_user.admin) %>
+      <div class="inner"><%= button_to 'Edit', edit_user_mainsheet_path(@mainsheet.user, @mainsheet), method: :get %></div>
+      <div class="inner"><%= button_to 'Destroy', [@mainsheet.user, @mainsheet], method: :delete, data: { confirm: 'Are you sure?' } %></div>
+   <% end %>
+</h1>
+<!--Right here is where books will be-->
+<br>
+<p class="pagetext"><%= @mainsheet.description %></p>
+<br>
+<div class="pagebox"><%= paginate @subsheets %></div>
+<div class="pagetext">
+   <% @subsheets.each_with_index do |subsheet, index| %>
+      <div class="container">
+         <div class="inner"><%= link_to subsheet.name, mainsheet_subsheet_path(@mainsheet, subsheet) %></div>
+         <% if current_user && (current_user.id == subsheet.user_id || current_user.admin) %>
+            <div class="inner"><%= button_to 'Edit', edit_mainsheet_subsheet_path(@mainsheet, subsheet), method: :get %></div>
+            <div class="inner"><%= button_to 'Destroy', [@mainsheet, subsheet], method: :delete, data: { confirm: 'Are you sure?' } %></div>
+         <% end %>
+         <p><%= audio_tag getSound(subsheet), :controls => true %></p>
+         <p>Created on: <%= subsheet.created_on.strftime("%B-%d-%Y") %></p>
+         <p>Announcer: <%= getType(subsheet.user) %><%= link_to subsheet.user.vname, user_path(subsheet.user) %></p>
+         <p>Collaboration: <%= subsheet.collab_mode %></p>
+      </div>
+      <% if ((index + 1) % 3) == 0 %>         
+         <br>
+         <br>
+      <% end %>
+   <% end %>
+</div>
+<br>
+<% if current_user %>
+   <p class="pagetext"><%= link_to "New Subsheet", new_mainsheet_subsheet_path(@mainsheet) %></p>
+   <br>
+<% end %>
+<p class="pagetext"><%= link_to 'Back', user_mainsheets_path(@mainsheet.user.vname) %></p>
