--- a/Trial/app/views/layouts/application.html.erb
+++ b/Trial/app/views/layouts/application.html.erb
@@ -6,7 +6,11 @@
       <meta name="keywords" content="<%= yield(:keywords) %>">
       <meta name="description" content="<%= yield(:description) %>">
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <%= stylesheet_link_tag    "http://static.duelingpets.net/assets/application", :media => "all" %>
+      <% if Rails.env.development? %>
+         <%= stylesheet_link_tag "application.css", :media => "all" %>
+      <% elsif Rails.env.production? %>
+         <%= stylesheet_link_tag "http://static.duelingpets.net/assets/application.css", :media => "none" %>
+      <% end %>
       <%= csrf_meta_tags %>
    </head>
    <body class="pagecontent">
@@ -25,6 +29,11 @@
          <%= yield %>
       </div>
       <!--To here-->
-      <%= javascript_include_tag "http://static.duelingpets.net/assets/application" %>
+      <% if Rails.env.development? %>
+         <%= javascript_include_tag "application.js" %>
+      <% elsif Rails.env.production? %>
+         <%= javascript_include_tag "http://static.duelingpets.net/assets/application.js" %>
+         <%= stylesheet_link_tag "http://static.duelingpets.net/assets/application.css", :media => "all" %>
+      <% end %>
    </body>
 </html>
