--- a/Trial/app/views/mainsheets/index.html.erb
+++ b/Trial/app/views/mainsheets/index.html.erb
@@ -1,31 +1,21 @@
-<h1>Listing mainsheets</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Created on</th>
-    <th>User</th>
-    <th>Maintenance</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<% provide(:title, "Mainsheets: Playing soungs all night long!") %>
+<% provide(:keywords, "creative, world, fanfiction, writer") %>
+<% provide(:description, "Where users can create awesome tunes for others to listen to.") %>
+<h1 class="pageheader">
+   <% if getOptional %>
+      <%= @user.vname %>'s mainsheets
+   <% else %>
+      Listing mainsheets
+   <% end %>
+</h1>
+<br>
+<div class="pagebox"><%= paginate @mainsheets %></div>
 <% @mainsheets.each do |mainsheet| %>
-  <tr>
-    <td><%= mainsheet.name %></td>
-    <td><%= mainsheet.description %></td>
-    <td><%= mainsheet.created_on %></td>
-    <td><%= mainsheet.user_id %></td>
-    <td><%= mainsheet.maintenance %></td>
-    <td><%= link_to 'Show', mainsheet %></td>
-    <td><%= link_to 'Edit', edit_mainsheet_path(mainsheet) %></td>
-    <td><%= link_to 'Destroy', mainsheet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+   <br>
+   <p class="pagetext"><%= link_to mainsheet.name, user_mainsheet_path(mainsheet.user, mainsheet) %></p>
+   <p class="pagetext">Created on: <%= mainsheet.created_on.strftime("%B-%d-%Y") %></p>
+   <p class="pagetext"><%= mainsheet.description %></p>
+   <% if !getOptional %>
+      <p class="pagetext">Announcer: <%= getType(mainsheet.user) %><%= link_to mainsheet.user.vname, user_path(mainsheet.user) %></p>
+   <% end %>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Mainsheet', new_mainsheet_path %>
