--- a/Trial/app/views/sounds/edit.html.erb
+++ b/Trial/app/views/sounds/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing sound</h1>
-
+<% provide(:title, "Sound: Edit your sound here!") %>
+<% provide(:description, "Allows the users to change the sound to the best of their abilities.") %>
+<h1 class="pagetextheader">Editing sound</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @sound %> |
-<%= link_to 'Back', sounds_path %>
+<p class="pagetext"><%= link_to 'Back', subsheet_sound_path(@subsheet, @sound) %></p>
