--- a/Trial/app/views/sounds/new.html.erb
+++ b/Trial/app/views/sounds/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New sound</h1>
-
+<% provide(:title, "Sound: Create new sounds here!") %>
+<% provide(:description, "New sounds are uploaded only to the site when the sound gets approved.") %>
+<h1 class="pagetextheader">New sound</h1>
 <%= render 'form' %>
-
-<%= link_to 'Back', sounds_path %>
+<p class="pagetext"><%= link_to 'Back', mainsheet_subsheet_path(@subsheet.mainsheet, @subsheet) %></p>
