--- a/Trial/app/views/users/show.html.erb
+++ b/Trial/app/views/users/show.html.erb
@@ -39,6 +39,20 @@
    <p class="pagetext">Pets</p>
    <p class="pagetext"><%= link_to 'My pets', user_petowners_path(@user) %></p>
 <% end %>
+<!--Radio section-->
+<% if @rcount > 0 || (current_user && current_user.id == @user.id) %>
+   <br>
+   <p class="pagetext">Radio</p>
+<% end %>
+<div class="pagetext">
+   <% if @rcount > 0 %>
+      <div class="inner"><%= link_to 'My Radios', user_mainsheets_path(@user) %></div>
+   <% end %>
+   <% if current_user && current_user.id == @user.id %>
+      <div class="inner"><%= link_to 'New Radio', new_user_mainsheet_path(@user) %></div>
+   <% end %>
+</div>
+<!--Blog section-->
 <% if @bcount > 0 || (current_user && current_user.id == @user.id) %>
    <br>
    <p class="pagetext">Blog</p>
