Updated the bot control code

--- a/Trial/app/views/blacklisteddomains/_form.html.erb
+++ b/Trial/app/views/blacklisteddomains/_form.html.erb
@@ -10,16 +10,17 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <br>
+  <div class="pagetext">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field">
+  <div class="pagetext">
     <%= f.label :domain_only %><br />
     <%= f.check_box :domain_only %>
   </div>
-  <div class="actions">
+  <div class="pagetext">
     <%= f.submit %>
   </div>
+  <br>
 <% end %>
