--- a/Trial/app/views/blacklistednames/_form.html.erb
+++ b/Trial/app/views/blacklistednames/_form.html.erb
@@ -8,14 +8,16 @@
         <li><%= msg %></li>
       <% end %>
       </ul>
+      </div>
     </div>
   <% end %>
-
-  <div class="field">
+  <br>
+  <div class="pagetext">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="actions">
+  <div class="pagetext">
     <%= f.submit %>
   </div>
+  <br>
 <% end %>
