--- a/Trial/app/views/blacklistednames/edit.html.erb
+++ b/Trial/app/views/blacklistednames/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing blacklistedname</h1>
-
+<% provide(:title, "Blacklistedname: Edit your blacklistednames here!") %>
+<% provide(:description, "Allows the admin to edit the names on the blacklist.") %>
+<h1 class="pagetextheader">Editing blacklistedname</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @blacklistedname %> |
-<%= link_to 'Back', blacklistednames_path %>
+<p class="pagetext"><%= link_to 'Back', blacklistednames_path %></p>
