--- a/Trial/app/views/blacklistednames/index.html.erb
+++ b/Trial/app/views/blacklistednames/index.html.erb
@@ -1,23 +1,18 @@
-<h1>Listing blacklistednames</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<% provide(:title, "Blacklistedname: The place that holds all the blacklistednames!") %>
+<% provide(:description, "A listing of all the bot names blacklisted for the admin to view.") %>
+<h1 class="pageheader">Listing blacklistednames</h1>
+<br>
+<div class="pagebox"><%= paginate @blacklistednames %></div>
+<br>
+<p class="pagetext">Name</p>
 <% @blacklistednames.each do |blacklistedname| %>
-  <tr>
-    <td><%= blacklistedname.name %></td>
-    <td><%= link_to 'Show', blacklistedname %></td>
-    <td><%= link_to 'Edit', edit_blacklistedname_path(blacklistedname) %></td>
-    <td><%= link_to 'Destroy', blacklistedname, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+   <br>
+   <div class=pagetext>
+      <div class="inner"><%= blacklistedname.name %></div><tr>
+      <div class="inner"><%= button_to 'Edit', edit_blacklistedname_path(blacklistedname), method: :get %></div>
+      <div class="inner"><%= button_to 'Destroy', blacklistedname, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+   </div>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Blacklistedname', new_blacklistedname_path %>
+<br>
+<p class="pagetext"><%= link_to 'New Blacklistedname', new_blacklistedname_path %></p>
