--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
 <br>
 <div class="navbox">
    <div id="navigationbox" class="navigation">
+      <!--Starting to get a bit too heavy with links right now.-->
       <!--Creativity and Community -->
       <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div><!--Works great for guest at 80% font -->
       <% if !current_user %>
@@ -21,8 +22,10 @@
          <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div><!--Come back to this later-->
          <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
       <% end %>
+      <div class="navigationspacing"><%= link_to "Tutorial", tutorial %></div>
       <div class="navigationspacing"><%= link_to "News", blogs_path %></div>
       <% if current_user %>
+         <div class="navigationspacing"><%= link_to "Active Users", active_path %></div>
          <div class="navigationspacing"><%= link_to "My Inventory", user_inventories_path(current_user.vname) %></div>
          <div class="navigationspacing"><%= link_to "Fight Monsters", pets_monsters_path %></div>
       <% end %>
