--- a/Trial/app/views/start/home.html.erb
+++ b/Trial/app/views/start/home.html.erb
@@ -1,10 +1,27 @@
 <% provide(:title, "Duelingpets: A kid friendly virtual pet site!") %>
-<% provide(:keywords, "kid, friendly, virtual, pet, site") %>
+<% provide(:keywords, "virtual, pet") %>
 <% provide(:description, "Duelingpets is a kid friendly virtual pet site that allows users to create their own pets, art, and stories.") %>
 <h1 id="main" tabindex="-1" class="pageheader">Welcome to the Dueling Pets Home Page!</h1>
 <br>
 <!--Need to indent this-->
-<p class="pagetext">At Dueling Pets, we offer users of our site the ability to not only join in pet vs monster fights, but to also have a chance to exercise their creativity when it comes to creating a pet or monster. Now for some of you, creating a pet may not be an option, but that is okay. We also offer users a chance to engage in telling stories or engaging in role plays on our forum. For the pet owners we offer several items from our shop to be used with your pet. These range from battle equipment to potions that can be purchased in the store, each of which will have some form of cost and will be deducted from your DP pouch upon initial purchase.</p>
+<% if registrationStatus == "Closed" %>
+   <div class="pagetext">
+      <p class="regcolor">User registration is currently closed</p>
+   </div>
+   <br>
+   <br>
+<% end %>
+<!--Need to detect that the user registration is closed here-->
+<p class="pagetext">Battiro the bat mascot welcomes you to Duelingpets the virtual pet site. This particular virtual pet site
+offers users the chance to create their very own pets, monsters and even items. This is a very rare as most pet sites don't 
+utilize the users creativity in creating pets and monsters. On top of this we also have our very own art gallery, stories,
+and audio section.</p>
+<br>
+<p class="pagetext">We have a great forum structure that allows the community to grow to a very large size by utilizing its
+five tier structure. Pets can also engage in battles with monsters to gain experience, points and boost tokens. Duelingpets
+even rewards users for creating content on the site itself by giving the users a set of points for their creations. The site
+itself is still in development and continues to grow with each passing day. Feel free to register for an account to get
+started on your adventure.</p>
 <!--End indent-->
 <% if Rails.env.development? %>
    <div class="mascotbox"><%= image_tag("/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
@@ -12,33 +29,15 @@
    <div class="mascotbox"><%= image_tag("http://static.duelingpets.net/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
 <% end %>
 <br>
-<p class="pagetext">Amount of users Online: <%= getOnline %></p>
-<p class="pagetext">Amount of users Offline: <%= getOffline %></p>
+<p class="pagetext">Amount of Online users: <%= getOnline %></p>
+<p class="pagetext">Amount of Inactive users: <%= getInactive %></p>
+<p class="pagetext">Amount of Offline users: <%= getOffline %></p>
 <p class="pagetext">Total users: <%= getTotal %></p>
 <br>
 <p class="pagetext">Users signed up today: <%= getDaySignups %></p>
 <p class="pagetext">Users signed up this week: <%= getWeekSignups %></p>
 <p class="pagetext">Users signed up this month: <%= getMonthSignups %></p>
 <p class="pagetext">Users signed up this year: <%= getYearSignups %></p>
-<% if current_user %>
-   <% if current_user.forums.count == 0 %>
-      <!--Need to indent this-->
-      <br>
-      <p class="pagetext">New User:</p>
-      <p class="pagetext">If you like to learn how to create a basic forum click on the Tutorial Forum link: <%= link_to "Tutorial Forum", tutorial %></p>
-      <p class="pagetext">Once there choose a topic you are interested in learning about.</p>
-      <!--End indent-->
-   <% end %>
-<% end %>
-<% if !current_user %>
-   <!--Need to indent-->
-   <br>
-   <p class="pagetext">Guest:</p>
-   <p class="pagetext">If you like to explore this site more then sign up for an account today by using the register link!</p>
-   <p class="pagetext">Which is located in the upper right hand corner of the screen.</p>
-   <p class="pagetext">If you like to get familiar with the features of this site check out the <%= link_to "Tutorial Forum", tutorial %></p>
-   <!--End indent-->
-<% end %>
 <br>
 <br>
 <p class="pagetext"><%= link_to "Sitemap", sitemap_path %></p>
