--- a/Trial/app/views/forums/index.html.erb
+++ b/Trial/app/views/forums/index.html.erb
@@ -18,8 +18,8 @@
       <p class="pagetext"><%= getType(forum.user) %><%= link_to forum.user.vname, user_path(forum.user) %></p>
       <p class="pagetext">Status: <%= getStatus(forum.user) %>
          <% if getStatus(forum.user) != "Online" %>
-            <% if getTime(forum.user) %>
-               for <%= distance_of_time_in_words_to_now getTime(forum.user) %>
+            <% if getTime(forum.user, getStatus(forum.user)) %>
+               for <%= distance_of_time_in_words_to_now getTime(forum.user, getStatus(forum.user)) %>
             <% end %>
          <% end %>
       </p>
