--- a/Trial/app/views/maintopics/show.html.erb
+++ b/Trial/app/views/maintopics/show.html.erb
@@ -16,8 +16,8 @@
       <p>by: <%= getType(subtopic.user) %><%= link_to subtopic.user.vname, user_path(subtopic.user) %></p>
       <p>Status: <%= getStatus(subtopic.user) %>
          <% if getStatus(subtopic.user) != "Online" %>
-            <% if getTime(subtopic.user) %>
-               for <%= distance_of_time_in_words_to_now getTime(subtopic.user) %>
+            <% if getTime(subtopic.user, getStatus(subtopic.user)) %>
+               for <%= distance_of_time_in_words_to_now getTime(subtopic.user, getStatus(subtopic.user)) %>
             <% end %>
          <% end %>
       </p>
