--- a/Trial/app/views/pms/inbox.html.erb
+++ b/Trial/app/views/pms/inbox.html.erb
@@ -17,8 +17,8 @@
          <p>Sent to: <%= getType(pm.to_user) %><%= link_to pm.to_user.vname, user_path(pm.to_user) %></p>
          <p>Status: <%= getStatus(pm.to_user) %>
             <% if getStatus(pm.to_user) != "Online" %>
-               <% if getTime(pm.to_user) %>
-                  for <%= distance_of_time_in_words_to_now getTime(pm.to_user) %>
+               <% if getTime(pm.to_user, getStatus(pm.to_user)) %>
+                  for <%= distance_of_time_in_words_to_now getTime(pm.to_user, getStatus(pm.to_user)) %>
                <% end %>
             <% end %>
          </p>
@@ -26,8 +26,8 @@
          <p>Owner: <%= getType(pm.from_user) %><%= link_to pm.from_user.vname, user_path(pm.from_user) %></p>
          <p>Status: <%= getStatus(pm.from_user) %>
             <% if getStatus(pm.from_user) != "Online" %>
-               <% if getTime(pm.from_user) %>
-                  for <%= distance_of_time_in_words_to_now getTime(pm.from_user) %>
+               <% if getTime(pm.from_user, getStatus(pm.from_user)) %>
+                  for <%= distance_of_time_in_words_to_now getTime(pm.from_user, getStatus(from.to_user)) %>
                <% end %>
             <% end %>
          </p>
