--- a/Trial/app/views/pms/outbox.html.erb
+++ b/Trial/app/views/pms/outbox.html.erb
@@ -16,8 +16,8 @@
       <p>Owner: <%= getType(pm.from_user) %><%= link_to pm.from_user.vname, user_path(pm.from_user) %></p>
       <p>Status: <%= getStatus(pm.from_user) %>
          <% if getStatus(pm.from_user) != "Online" %>
-            <% if getTime(pm.from_user) %>
-               for <%= distance_of_time_in_words_to_now getTime(pm.from_user) %>
+            <% if getTime(pm.from_user, getStatus(pm.from_user)) %>
+               for <%= distance_of_time_in_words_to_now getTime(pm.from_user, getStatus(pm.from_user)) %>
             <% end %>
          <% end %>
       </p>
